fixes spacing issue on cluster pages

--- a/common/css/coned.less
+++ b/common/css/coned.less
@@ -961,7 +961,7 @@ div#content {
 	.cluster-items {
 		border:1px solid #ececec;
 		border-bottom: 0;
-		margin: 1em 2% 2em 2%;
+		margin: 1em 2% 1em 2%;
 		width:96%;
 		background:white;
 		display:block;
